# Template

./: CMakeLists.txt  readme.txt  template_workspace.code-workspace  toolchain.cmake
application/: main.c
drivers/: STM32F412RETX_FLASH.ld  STM32F412RETX_RAM.ld  stm32f4xx.h
